# zk-SaaS

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  package.json  rust-toolchain.toml
.github/workflows/: ci.yml
dist-primitives/: Cargo.toml
dist-primitives/examples/: dfft_test.rs  dmsm_bench.rs  dmsm_test.rs  dpp_test.rs  local_dfft_test.rs  msm_bench.rs
dist-primitives/src/: lib.rs
dist-primitives/src/channel/: channel.rs  mod.rs
dist-primitives/src/dfft/: dfft.rs  mod.rs  tests.rs
dist-primitives/src/dmsm/: dmsm.rs  mod.rs
dist-primitives/src/dpp/: dpp.rs  mod.rs
dist-primitives/src/utils/: deg_red.rs  mod.rs  pack.rs
fixtures/: verification_key.json  verifier.sol
fixtures/sha256/: sha256.circom  sha256.wasm
fixtures/sha256/sha256_js/: sha256.wasm
groth16/: Cargo.toml  README.md
groth16/examples/: ext_wit_bench.rs  groth_bench.rs  local_groth_bench.rs  sha256.rs
groth16/src/: ext_wit.rs  lib.rs  proof.rs  prove.rs  prover.rs  proving_key.rs  qap.rs
mpc-net/: Cargo.toml  README.md
mpc-net/examples/: add_ids.rs  gen_cert.rs
mpc-net/src/: lib.rs  multi.rs  prod.rs  ser_net.rs  two.rs
network-address/: 4
plonk/: Cargo.toml  README.md
plonk/examples/: dpoly_commit_test.rs  local_plonk_test.rs  plonk_bench.rs
plonk/src/: dplonk.rs  dpoly_commit.rs  lib.rs  localplonk.rs  poly_commit.rs
scripts/: compile_circuit.sh  dfft_test.zsh  dmsm_bench.zsh  dmsm_test.zsh  dpoly_commit_test.zsh  dpp_test.zsh  ext_wit_test.zsh  groth_bench.zsh  phase2_proving_key.sh  plonk_bench.zsh  prod_net_example.sh  sha256.zsh
secret-sharing/: Cargo.toml
secret-sharing/src/: gao.rs  lib.rs  pss.rs  utils.rs
zk-gadget/src/gadget/: mod.rs
zk-gadget/src/gadget/registry/: mod.rs
