[package]
name = "groth16"
version = "0.1.0"
edition = "2021"

[dependencies]
# ARK Libraries
ark-std = {version = "0.4.0", default-features = false, features = [ "print-trace", "std" ]}
ark-crypto-primitives = {version = "0.4.0", default-features = false}
ark-ff = {version = "0.4.0", default-features = false}
ark-poly = {version = "0.4.0", default-features = false}
ark-ec = {version = "=0.4.1", default-features = false}
ark-relations = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false, features = [ "derive" ] }
ark-groth16 = { version = "0.4.0", default-features = false }
ark-circom = { git = "https://github.com/webb-tools/ark-circom.git" }

# ARK curves
ark-bls12-377 = {version = "0.4.0", default-features = false, features = ["curve"] }
ark-bn254 = {version = "0.4.0", default-features = false, features = ["curve"] }

# PSS and MPC Libraries
secret-sharing = { version = "0.1.0", path = "../secret-sharing" }
mpc-net = { version = "0.1.0", path = "../mpc-net" }
dist-primitives = {version = "0.1.0", path = "../dist-primitives" }

# Other Libraries
log = {version = "0.4"}
rayon = { version = "1.8.0", optional = true }
rand = { version = "0.8", default-features = false, features = ["std"] }
digest = { version = "0.10" }
sha2 = "0.10"
structopt = "0.3"
env_logger = "0.8"
tokio = { version = "1.32.0", features = ["macros", "rt"] }

[features]
parallel = ["ark-std/parallel", "rayon"]
