[package]
name = "mpc-net"
version = "0.1.0"
authors = ["Alex Ozdemir <aozdemir@hmc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
log = {version = "0.4"}
ark-std = {version = "0.4.0", default-features = false}
derivative = { version = "2.0", features = ["use_core"]}
futures = "0.3.28"
async-trait = "0.1.73"
tokio = { version = "1.32.0", features = ["net", "time", "fs", "io-util"] }
auto_impl = "1.1.0"

[dev-dependencies]
structopt = { version = "0.3" }
env_logger = "0.10"

