[package]
name = "mpc-net"
version = "0.1.0"
authors = ["Alex Ozdemir <aozdemir@hmc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
log = {version = "0.4"}
ark-std = {version = "0.4.0", default-features = false}
derivative = { version = "2.0", features = ["use_core"]}
futures = "0.3.28"
async-trait = "0.1.73"
tokio = { version = "1.32.0", features = ["net", "time", "fs", "io-util", "macros", "rt-multi-thread"] }
auto_impl = "1.1.0"
parking_lot = "0.12.1"
tokio-util = { version = "0.7.9", features = ["codec"] }
async_smux = "=0.3.0"
serde = { version = "1.0.188", features = ["derive"] }
bincode2 = "2.0.1"
rcgen = "0.11.3"
rustls = "0.21.7"
tokio-rustls = "0.24.1"
rustls-pemfile = "1.0.3"
strum = { version = "0.25.0", features = ["derive"] }
ark-serialize = { version = "0.4.0", default-features = false, features = [ "derive" ] }

[dev-dependencies]
structopt = { version = "0.3" }
env_logger = "0.10"

