[package]
name = "secret-sharing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-poly = {version = "0.4.0", default-features = false}
ark-ff = {version = "0.4.0", default-features = false}
ark-ec = {version = "0.4.0", default-features = false}
ark-std = {version = "0.4.0", default-features = false}
ark-bls12-377 = {version = "0.4.0", default-features = false, features = ["curve"] }