[package]
name = "secret-sharing"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-poly = {version = "0.4.0", default-features = false}
ark-ff = {version = "0.4.0", default-features = false}
ark-ec = {version = "0.4.2", default-features = false}
ark-std = {version = "0.4.0", default-features = false}

[dev-dependencies]
ark-ec = {version = "0.4.0", default-features = false}
ark-bls12-377 = {version = "0.4.0", default-features = false, features = ["curve"] }